--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@nuxtjs/supabase": "1.5.0",
     "@pinia/nuxt": "^0.10.1",
+    "@vueuse/core": "^13.0.0",
+    "@vueuse/nuxt": "13.0.0",
     "nuxt": "^3.16.1",
     "pinia": "^3.0.1",
     "vue": "^3.5.13",
