--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@vueuse/nuxt": "13.0.0",
     "nuxt": "^3.16.1",
     "pinia": "^3.0.1",
+    "uuid": "^11.1.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
