--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
     "@nuxtjs/supabase": "1.5.0",
     "@pinia/nuxt": "^0.10.1",
     "@vueuse/core": "^13.0.0",
+    "@vueuse/integrations": "^13.0.0",
     "@vueuse/nuxt": "13.0.0",
+    "dayjs": "^1.11.13",
+    "dayjs-nuxt": "2.1.11",
     "nuxt": "^3.16.1",
     "pinia": "^3.0.1",
+    "qrcode": "^1",
     "uuid": "^11.1.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
