--- a/package.json
+++ b/package.json
@@ -26,6 +26,11 @@
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
-    "@nuxtjs/tailwindcss": "^6.13.2"
+    "@nuxt/test-utils": "^3.17.2",
+    "@nuxtjs/tailwindcss": "^6.13.2",
+    "@vue/test-utils": "^2.4.6",
+    "happy-dom": "^17.4.4",
+    "playwright-core": "^1.51.1",
+    "vitest": "^3.1.1"
   }
 }
