--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxt/icon": "1.12.0",
     "@nuxtjs/supabase": "1.5.0",
     "@pinia/nuxt": "^0.10.1",
     "@supabase/supabase-js": "^2.49.4",
