--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@nuxtjs/tailwindcss": "^6.13.2",
     "@vue/test-utils": "^2.4.6",
     "happy-dom": "^17.4.4",
+    "nuxt-anchorscroll": "^1.0.5",
     "playwright-core": "^1.51.1",
     "vitest": "^3.1.1"
   }
