--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@nuxt/icon": "1.12.0",
+    "@nuxtjs/i18n": "10.0.5",
     "@nuxtjs/supabase": "1.5.0",
     "@pinia/nuxt": "^0.10.1",
     "@supabase/supabase-js": "^2.49.4",
